fixes table issues on mobile

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -143,18 +143,33 @@ span {
     @include flex(flex, center, center);
     margin-bottom: 1rem;
 
+    @media screen and (max-width: 550px) {
+      display: block;
+    }
+
     button, span, a {
       margin-right: 1rem;
+    }
+
+    @media screen and (max-width: 550px) {
+      .react-file-reader, a, button {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+
+      .divider {
+        display: none;
+      }
     }
   }
 
   &__table {
-    @media (max-width: 767px) {
-      margin: 1rem 0 0 0;
-    }
-
     display: flex;
     box-shadow: 0 35px 50px rgba( 0, 0, 0, 0.2 );
+
+    @media screen and (max-width: 550px) {
+      display: block;
+    }
   }
 
   &__feedback {
@@ -166,12 +181,13 @@ span {
     white-space: nowrap;
     background-color: white;
 
-    tbody tr td:nth-child(even) {
-      background: #f2f2f2;
+    @media screen and (max-width: 550px) {
+      width: 100%;
+      margin-top: 1rem;
     }
 
-    @media (max-width: 767px) {
-      width: 20%;
+    tbody tr td:nth-child(even) {
+      background: #f2f2f2;
     }
 
     tbody tr td {
@@ -179,21 +195,10 @@ span {
       width: 100%;
       text-align: center;
       display: block;
-
-      @media (max-width: 767px) {
-        padding: 0;
-        height: 63px;
-
-        &:last-child {
-          height: 0;
-        }
-      }
     }
 
     &--head {
-      @media (max-width: 767px) {
-        display: none;
-      }
+
     }
   }
 }
