--- a/src/assets/scss/components/table.scss
+++ b/src/assets/scss/components/table.scss
@@ -60,9 +60,6 @@
 // Responsive
 @media (max-width: 767px) {
   .table {
-    display: block;
-    width: 80%;
-
     thead {
       float: left;
     }
